--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "mongoose": "^5.10.6",
+    "mongoose-unique-validator": "^2.0.3",
     "puppeteer": "^5.3.1"
-  }
+  },
+  "devDependencies": {}
 }
